добавил модельку запроса атемс+поправил доки сваггера
