# docs/swagger.json
@@ -26,7 +26,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UserCostItems"
+                            "$ref": "#/definitions/model.CreateItemsRequest"
                         }
                     }
                 ],
@@ -172,7 +172,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UserCostItems"
+                            "$ref": "#/definitions/model.CreateItemsRequest"
                         }
                     }
                 ],
@@ -363,6 +363,25 @@
         }
     },
     "definitions": {
+        "model.CreateItemsRequest": {
+            "type": "object",
+            "required": [
+                "description",
+                "guid",
+                "item_name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "guid": {
+                    "type": "string"
+                },
+                "item_name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.ExpensePeriod": {
             "type": "object",
             "properties": {
@@ -373,23 +392,6 @@
                     "type": "string"
                 },
                 "todate": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.UserCostItems": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "guid": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "item_name": {
                     "type": "string"
                 }
             }
